started to work on EDA on the dataset loaded from Kaggle idrectly and stored as pickle locally

--- a/notebooks/2_EDA.ipynb
+++ b/notebooks/2_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "import sys, os\n",
     "sys.path.append(os.path.abspath(\"src\")) # add src folder to path\n",
     "# import local modules and submodules\n",
-    "from data_ravers_utils.file_handler import *\n",
+    "import data_ravers_utils.file_handler \n",
+    "import data_ravers_utils.eda_utils as eda\n",
     "\n",
     "# Settings\n",
     "pd.set_option('display.max_columns', None) # display all columns\n",
@@ -29,8 +30,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bandcamp sales dataset contains 1,000,000 items from Bandcamp's sales feed between 9/9/2020 and 10/2/2020.\n",
+    "\n",
+    "It is a slice of the whole dataset used in The Chaos Bazaar. It contains the following columns:\n",
+    "\n",
+    "- _id: unique identifier combining the sale's URL and UTC timestamp.\n",
+    "- url: the path to the item on Bandcamp. Use this column to join this dataset to the dataset of Bandcamp items.\n",
+    "- artist_name: Name of the artist.\n",
+    "- album_title: Title of the album, if applicable.\n",
+    "- art_url: path to the item's art image.\n",
+    "- item_type: denotes the type of object. a for digital albums, p for physical items, and t for digital tracks.\n",
+    "- slug_type: also denotes the type of object. a for all albums, p for merch, and t for tracks.\n",
+    "- utc_date: the UTC timestamp of the sale datetime.\n",
+    "- country_code: country code of the buyer.\n",
+    "- country: full country code name of the buyer.\n",
+    "- item_price: price of the item in the seller's currency.\n",
+    "- currency: the seller's currency.\n",
+    "- amount_paid: amount paid in the seller's currency.\n",
+    "- amount_paid_fmt: amount paid in the seller's currency, with the currency symbol.\n",
+    "- amount_paid_usd: amount paid converted to US Dollars.\n",
+    "- amount_over_fmt: amount voluntarily paid over the item price in the seller's currency."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +292,7 @@
        "4             NaN       NaN         NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,6 +303,86 @@
     "df = data.copy()\n",
     "df.head(5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dropping columns that are not important for sure in the context of this project\n",
+    "- artworks\n",
+    "- keep only 'amount_paid_usd' for the purchase value, as it is unified\n",
+    "- currency is dropped because because there is a column country and all payments are unified to usd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_to_drop = ['track_album_slug_text', 'package_image_id', 'art_url', 'amount_paid_fmt', 'amount_paid', 'addl_count', 'item_price', 'currency']\n",
+    "df.drop(columns=columns_to_drop, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Number of rows before cleanup: 1000000\n",
+      "INFO:root:Dataset has no empty spaces.\n",
+      "INFO:root:Dataset has no duplicates.\n",
+      "INFO:root:Number of rows after cleanup: 1000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "eda.auto_cleanup(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   is_na   not_na  na_percent na_percent_pretty\n",
+      "releases          988416    11584     98.8416            98.84%\n",
+      "item_slug         978258    21742     97.8258            97.83%\n",
+      "amount_over_fmt   880867   119133     88.0867            88.09%\n",
+      "album_title       643539   356461     64.3539            64.35%\n",
+      "art_id            235480   764520     23.5480            23.55%\n",
+      "slug_type          11584   988416      1.1584             1.16%\n",
+      "item_description      23   999977      0.0023             0.00%\n",
+      "artist_name           10   999990      0.0010             0.00%\n",
+      "_id                    0  1000000      0.0000             0.00%\n",
+      "item_type              0  1000000      0.0000             0.00%\n",
+      "utc_date               0  1000000      0.0000             0.00%\n",
+      "country_code           0  1000000      0.0000             0.00%\n",
+      "country                0  1000000      0.0000             0.00%\n",
+      "url                    0  1000000      0.0000             0.00%\n",
+      "amount_paid_usd        0  1000000      0.0000             0.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_nulls = eda.count_nulls(df)\n",
+    "print(df_nulls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
