--- a/notebooks/2_EDA.ipynb
+++ b/notebooks/2_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "import sys, os\n",
     "sys.path.append(os.path.abspath(\"src\")) # add src folder to path\n",
     "# import local modules and submodules\n",
-    "import data_ravers_utils.file_handler \n",
+    "import data_ravers_utils.file_handler as fl\n",
     "import data_ravers_utils.eda_utils as eda\n",
     "\n",
     "# Settings\n",
@@ -34,8 +34,6 @@
    "metadata": {},
    "source": [
     "Bandcamp sales dataset contains 1,000,000 items from Bandcamp's sales feed between 9/9/2020 and 10/2/2020.\n",
-    "\n",
-    "It is a slice of the whole dataset used in The Chaos Bazaar. It contains the following columns:\n",
     "\n",
     "- _id: unique identifier combining the sale's URL and UTC timestamp.\n",
     "- url: the path to the item on Bandcamp. Use this column to join this dataset to the dataset of Bandcamp items.\n",
@@ -57,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -292,41 +290,21 @@
        "4             NaN       NaN         NaN  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_filename = 'bandcamp-sales'\n",
-    "data = read_df_pickle('bandcamp-sales')\n",
+    "data = fl.read_df_pickle('bandcamp-sales')\n",
     "df = data.copy()\n",
     "df.head(5)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Dropping columns that are not important for sure in the context of this project\n",
-    "- artworks\n",
-    "- keep only 'amount_paid_usd' for the purchase value, as it is unified\n",
-    "- currency is dropped because because there is a column country and all payments are unified to usd"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "columns_to_drop = ['track_album_slug_text', 'package_image_id', 'art_url', 'amount_paid_fmt', 'amount_paid', 'addl_count', 'item_price', 'currency']\n",
-    "df.drop(columns=columns_to_drop, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -346,29 +324,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                   is_na   not_na  na_percent na_percent_pretty\n",
-      "releases          988416    11584     98.8416            98.84%\n",
-      "item_slug         978258    21742     97.8258            97.83%\n",
-      "amount_over_fmt   880867   119133     88.0867            88.09%\n",
-      "album_title       643539   356461     64.3539            64.35%\n",
-      "art_id            235480   764520     23.5480            23.55%\n",
-      "slug_type          11584   988416      1.1584             1.16%\n",
-      "item_description      23   999977      0.0023             0.00%\n",
-      "artist_name           10   999990      0.0010             0.00%\n",
-      "_id                    0  1000000      0.0000             0.00%\n",
-      "item_type              0  1000000      0.0000             0.00%\n",
-      "utc_date               0  1000000      0.0000             0.00%\n",
-      "country_code           0  1000000      0.0000             0.00%\n",
-      "country                0  1000000      0.0000             0.00%\n",
-      "url                    0  1000000      0.0000             0.00%\n",
-      "amount_paid_usd        0  1000000      0.0000             0.00%\n"
+      "                        is_na   not_na  na_percent na_percent_pretty\n",
+      "track_album_slug_text  997763     2237     99.7763            99.78%\n",
+      "releases               988416    11584     98.8416            98.84%\n",
+      "item_slug              978258    21742     97.8258            97.83%\n",
+      "addl_count             978258    21742     97.8258            97.83%\n",
+      "amount_over_fmt        880867   119133     88.0867            88.09%\n",
+      "package_image_id       767292   232708     76.7292            76.73%\n",
+      "album_title            643539   356461     64.3539            64.35%\n",
+      "art_id                 235480   764520     23.5480            23.55%\n",
+      "slug_type               11584   988416      1.1584             1.16%\n",
+      "item_description           23   999977      0.0023             0.00%\n",
+      "artist_name                10   999990      0.0010             0.00%\n",
+      "_id                         0  1000000      0.0000             0.00%\n",
+      "art_url                     0  1000000      0.0000             0.00%\n",
+      "item_type                   0  1000000      0.0000             0.00%\n",
+      "utc_date                    0  1000000      0.0000             0.00%\n",
+      "country_code                0  1000000      0.0000             0.00%\n",
+      "country                     0  1000000      0.0000             0.00%\n",
+      "amount_paid_fmt             0  1000000      0.0000             0.00%\n",
+      "item_price                  0  1000000      0.0000             0.00%\n",
+      "url                         0  1000000      0.0000             0.00%\n",
+      "amount_paid                 0  1000000      0.0000             0.00%\n",
+      "currency                    0  1000000      0.0000             0.00%\n",
+      "amount_paid_usd             0  1000000      0.0000             0.00%\n"
      ]
     }
    ],
@@ -378,11 +364,338 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preserving target data\n",
+    "\n",
+    "- `amount_paid_usd` column contains the total cost of purchase in unified format - converted from original currency to USD for compatibility. \n",
+    "  - This is the target variable for understanding sales trends.\n",
+    "  - This data is derived from columns:\n",
+    "    - `amount_paid_fmt`, `amount_paid`, `item_price`, `currency`, `amount_over_fmt`\n",
+    "    - Data relation formula in pseudocode:\n",
+    "    - ```amount_paid_usd = (item_price + amount_over_fmt = amount_paid) convert from currency to USD```\n",
+    "    - This assumption must be verified before any of the columns will be dropped.\n",
+    "\n",
+    "- `amount_over_fmt` column contains information about voluntarily paid over the item price in the seller's currency. It is important for the project objective of exploring fan generosity.\n",
+    "  - this data is stored in seller's currency and needs to be unified by converting into dollars. For this `currency` column is necessary. \n",
+    "  - 88.09% of the column is missing data. That are cases where buyers did not pay extra on top of `item_price`. Must be filled with 0.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysing data types and unique values to reduce data junk"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from IPython.utils.capture import capture_output\n",
+    "\n",
+    "# this code will be captured in memory and not displayed\n",
+    "with capture_output() as output:\n",
+    "    eda.print_eda_report(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================= Dataset =================\n",
+      "Dataset has shape (1000000, 23)\n",
+      "\n",
+      "Dataset has numerical data in columns: ['utc_date', 'item_price', 'art_id', 'amount_paid', 'releases', 'amount_paid_usd', 'package_image_id', 'addl_count']\n",
+      "- Column \"utc_date\" has 999990 unique values.\n",
+      "- Column \"art_id\" has 271430 unique values.\n",
+      "- Column \"package_image_id\" has 63940 unique values.\n",
+      "- Column \"amount_paid_usd\" has 5866 unique values.\n",
+      "- Column \"amount_paid\" has 3315 unique values.\n",
+      "- Column \"item_price\" has 2878 unique values.\n",
+      "- Column \"releases\" has 220 unique values.\n",
+      "- Column \"addl_count\" has 17 unique values.\n",
+      "  -- Unique values are:\n",
+      " [nan  1.  2.  3.  9.  8.  5.  4.  7. 12.  6. 19. 11. 14. 10. 22. 13. 15.]\n",
+      "\n",
+      "Dataset has categorical data in columns: ['_id', 'art_url', 'item_type', 'country_code', 'track_album_slug_text', 'country', 'slug_type', 'amount_paid_fmt', 'item_description', 'url', 'artist_name', 'currency', 'album_title', 'amount_over_fmt', 'item_slug']\n",
+      "- Column \"_id\" has 1000000 unique values.\n",
+      "- Column \"art_url\" has 335212 unique values.\n",
+      "- Column \"item_type\" has 4 unique values.\n",
+      "  -- Unique values are:\n",
+      " ['a' 'p' 't' 'b']\n",
+      "- Column \"country_code\" has 186 unique values.\n",
+      "- Column \"track_album_slug_text\" has 792 unique values.\n",
+      "- Column \"country\" has 186 unique values.\n",
+      "- Column \"slug_type\" has 3 unique values.\n",
+      "  -- Unique values are:\n",
+      " ['a' 't' 'p' nan]\n",
+      "- Column \"amount_paid_fmt\" has 7127 unique values.\n",
+      "- Column \"item_description\" has 336985 unique values.\n",
+      "- Column \"url\" has 374473 unique values.\n",
+      "- Column \"artist_name\" has 159746 unique values.\n",
+      "- Column \"currency\" has 18 unique values.\n",
+      "  -- Unique values are:\n",
+      " ['USD' 'GBP' 'EUR' 'AUD' 'JPY' 'SEK' 'CAD' 'CZK' 'NZD' 'DKK' 'CHF' 'ILS'\n",
+      " 'HUF' 'PLN' 'NOK' 'MXN' 'HKD' 'SGD']\n",
+      "- Column \"album_title\" has 103697 unique values.\n",
+      "- Column \"amount_over_fmt\" has 3084 unique values.\n",
+      "- Column \"item_slug\" has 156 unique values.\n",
+      "\n",
+      "\n",
+      "Output has been saved to file:\n",
+      "/Users/bubblegum_doubledrops/Library/Mobile Documents/com~apple~CloudDocs/0prio - Important heavy backups/IronHack/big_projects/midproject-bandcamp-insights/docs/auto_eda_raw_report.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output.stdout)\n",
+    "\n",
+    "report_path = f'{fl.PROJECT_ROOT}/docs/auto_eda_raw_report.md'\n",
+    "\n",
+    "with open(report_path, \"w\") as f:\n",
+    "    f.write(output.stdout)\n",
+    "\n",
+    "print(f\"Output has been saved to file:\\n{report_path}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Identifying columns that are not important for sure in the context of this project\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_to_drop = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What to do with `track_album_slug_text`, `item_slug`?!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, '/album/', '/album/prabhupadas-dissp-2015-3-vishakha-brhmch',\n",
+       "       '/album/friends-from-childhood', '/album/will-he-save-us'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5 examples of unique values for 'item_slug'\n",
+    "eda.unique_values_list(df, 'item_slug')[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['/album/failure-to-return',\n",
+       "       '/album/fuck-you-diggy-1-d-x-nem-x-lil-woofy-woof-x-dj-killa-c-x-g-lo-key-x-mr-sisco-prod-nem',\n",
+       "       '/album/individuum-ii', '/album/hand-covering-sun-extended-mix',\n",
+       "       '/album/airbuccaneers-2'], dtype=object)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# items are sorted alphabetically, show the end of the list\n",
+    "eda.unique_values_list(df, 'item_slug')[-5:][::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, 'pachuco', 'dale-roberts',\n",
+       "       'prabhupadas-dissp-2015-3-vishakha-brhmch', '--348'], dtype=object)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5 examples of unique values for 'track_album_slug_text'\n",
+    "eda.unique_values_list(df, 'track_album_slug_text')[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['fetus-tacos-2', '04-allmiladies-3', 'party-plannin-intro',\n",
+       "       'aquawave', 'failure-to-return'], dtype=object)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# items are sorted alphabetically, show the end of the list\n",
+    "eda.unique_values_list(df, 'track_album_slug_text')[-5:][::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_to_drop += ['item_slug', 'track_album_slug_text']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is no description of `addl_count` column, there are 97.83% null values. Therefore this column should be dropped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan,  1.,  2.,  3.,  9.,  8.,  5.,  4.,  7., 12.,  6., 19., 11.,\n",
+       "       14., 10., 22., 13., 15.])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eda.unique_values_list(df, 'addl_count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_to_drop.append('addl_count')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Columns related to artworks should be dropped for the scope of this project as retrieving and interpreting the relevant information is costly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_to_drop += ['package_image_id', 'art_url']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dropping unusful columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns=columns_to_drop, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Treating target related columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Treating absence of data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Backup dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Backup file is created: /Users/bubblegum_doubledrops/Library/Mobile Documents/com~apple~CloudDocs/0prio - Important heavy backups/IronHack/big_projects/midproject-bandcamp-insights/data/bandcamp-sales.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "fl.save_df_pickle(df, df_filename)"
+   ]
   }
  ],
  "metadata": {
