--- a/notebooks/1_dataset_maintenance.ipynb
+++ b/notebooks/1_dataset_maintenance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "4             NaN       NaN         NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,19 +293,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Backup file is created: /Users/bubblegum_doubledrops/Library/Mobile Documents/com~apple~CloudDocs/0prio - Important heavy backups/IronHack/big_projects/midproject-bandcamp-insights/data/bandcamp-sales.pkl\n"
+      "INFO:root:Backup file is created: /Users/bubblegum_doubledrops/Library/Mobile Documents/com~apple~CloudDocs/0prio - Important heavy backups/IronHack/big_projects/midproject-bandcamp-insights/data/bandcamp-sales-v0-raw.pkl\n"
      ]
     }
    ],
    "source": [
-    "df_filename = 'bandcamp-sales'\n",
+    "df_filename = 'bandcamp-sales-v0-raw'\n",
     "save_df_pickle(df, df_filename)\n"
    ]
   },
@@ -318,12 +318,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>art_url</th>\n",
+       "      <th>item_type</th>\n",
+       "      <th>utc_date</th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>track_album_slug_text</th>\n",
+       "      <th>country</th>\n",
+       "      <th>slug_type</th>\n",
+       "      <th>amount_paid_fmt</th>\n",
+       "      <th>item_price</th>\n",
+       "      <th>item_description</th>\n",
+       "      <th>art_id</th>\n",
+       "      <th>url</th>\n",
+       "      <th>amount_paid</th>\n",
+       "      <th>releases</th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>album_title</th>\n",
+       "      <th>amount_paid_usd</th>\n",
+       "      <th>package_image_id</th>\n",
+       "      <th>amount_over_fmt</th>\n",
+       "      <th>item_slug</th>\n",
+       "      <th>addl_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1599688803.5175&amp;//girlbanddublin.bandcamp.com/...</td>\n",
+       "      <td>https://f4.bcbits.com/img/a0206405257_7.jpg</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1.599689e+09</td>\n",
+       "      <td>gb</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>a</td>\n",
+       "      <td>$9.99</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>Live at Vicar Street</td>\n",
+       "      <td>2.064053e+08</td>\n",
+       "      <td>//girlbanddublin.bandcamp.com/album/live-at-vi...</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Girl Band</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1599688805.27838&amp;//maharettarecords.bandcamp.c...</td>\n",
+       "      <td>https://f4.bcbits.com/img/a2984241552_7.jpg</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1.599689e+09</td>\n",
+       "      <td>fi</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>a</td>\n",
+       "      <td>£1</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>Neurogen</td>\n",
+       "      <td>2.984242e+09</td>\n",
+       "      <td>//maharettarecords.bandcamp.com/album/neurogen</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Jirah</td>\n",
+       "      <td>GBP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1599688805.90646&amp;//maharettarecords.bandcamp.c...</td>\n",
+       "      <td>https://f4.bcbits.com/img/a3320494770_7.jpg</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1.599689e+09</td>\n",
+       "      <td>fi</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>a</td>\n",
+       "      <td>£3</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>The Last Snare Bender</td>\n",
+       "      <td>3.320495e+09</td>\n",
+       "      <td>//maharettarecords.bandcamp.com/album/the-last...</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>D-Ther</td>\n",
+       "      <td>GBP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.90</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1599688806.94234&amp;//alicesitski.bandcamp.com/al...</td>\n",
+       "      <td>https://f4.bcbits.com/img/0020476345_37.jpg</td>\n",
+       "      <td>p</td>\n",
+       "      <td>1.599689e+09</td>\n",
+       "      <td>gb</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>a</td>\n",
+       "      <td>€10.50</td>\n",
+       "      <td>10.50</td>\n",
+       "      <td>Limited Edition Compact Disc</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>//alicesitski.bandcamp.com/album/white-noise-tv</td>\n",
+       "      <td>10.50</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>WHITE NOISE TV</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>WHITE NOISE TV</td>\n",
+       "      <td>12.39</td>\n",
+       "      <td>20476345.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1599688809.07942&amp;//linguaignota.bandcamp.com/t...</td>\n",
+       "      <td>https://f4.bcbits.com/img/a3428873396_7.jpg</td>\n",
+       "      <td>t</td>\n",
+       "      <td>1.599689e+09</td>\n",
+       "      <td>us</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>t</td>\n",
+       "      <td>$1</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>O Ruthless Great Divine Director</td>\n",
+       "      <td>3.428873e+09</td>\n",
+       "      <td>//linguaignota.bandcamp.com/track/o-ruthless-g...</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LINGUA IGNOTA</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 _id  \\\n",
+       "0  1599688803.5175&//girlbanddublin.bandcamp.com/...   \n",
+       "1  1599688805.27838&//maharettarecords.bandcamp.c...   \n",
+       "2  1599688805.90646&//maharettarecords.bandcamp.c...   \n",
+       "3  1599688806.94234&//alicesitski.bandcamp.com/al...   \n",
+       "4  1599688809.07942&//linguaignota.bandcamp.com/t...   \n",
+       "\n",
+       "                                       art_url item_type      utc_date  \\\n",
+       "0  https://f4.bcbits.com/img/a0206405257_7.jpg         a  1.599689e+09   \n",
+       "1  https://f4.bcbits.com/img/a2984241552_7.jpg         a  1.599689e+09   \n",
+       "2  https://f4.bcbits.com/img/a3320494770_7.jpg         a  1.599689e+09   \n",
+       "3  https://f4.bcbits.com/img/0020476345_37.jpg         p  1.599689e+09   \n",
+       "4  https://f4.bcbits.com/img/a3428873396_7.jpg         t  1.599689e+09   \n",
+       "\n",
+       "  country_code track_album_slug_text         country slug_type  \\\n",
+       "0           gb                   NaN  United Kingdom         a   \n",
+       "1           fi                   NaN         Finland         a   \n",
+       "2           fi                   NaN         Finland         a   \n",
+       "3           gb                   NaN  United Kingdom         a   \n",
+       "4           us                   NaN   United States         t   \n",
+       "\n",
+       "  amount_paid_fmt  item_price                  item_description        art_id  \\\n",
+       "0           $9.99        9.99              Live at Vicar Street  2.064053e+08   \n",
+       "1              £1        1.00                          Neurogen  2.984242e+09   \n",
+       "2              £3        3.00             The Last Snare Bender  3.320495e+09   \n",
+       "3          €10.50       10.50      Limited Edition Compact Disc           NaN   \n",
+       "4              $1        1.00  O Ruthless Great Divine Director  3.428873e+09   \n",
+       "\n",
+       "                                                 url  amount_paid  releases  \\\n",
+       "0  //girlbanddublin.bandcamp.com/album/live-at-vi...         9.99       NaN   \n",
+       "1     //maharettarecords.bandcamp.com/album/neurogen         1.00       NaN   \n",
+       "2  //maharettarecords.bandcamp.com/album/the-last...         3.00       NaN   \n",
+       "3    //alicesitski.bandcamp.com/album/white-noise-tv        10.50       NaN   \n",
+       "4  //linguaignota.bandcamp.com/track/o-ruthless-g...         1.00       NaN   \n",
+       "\n",
+       "      artist_name currency     album_title  amount_paid_usd  package_image_id  \\\n",
+       "0       Girl Band      USD             NaN             9.99               NaN   \n",
+       "1           Jirah      GBP             NaN             1.30               NaN   \n",
+       "2          D-Ther      GBP             NaN             3.90               NaN   \n",
+       "3  WHITE NOISE TV      EUR  WHITE NOISE TV            12.39        20476345.0   \n",
+       "4   LINGUA IGNOTA      USD             NaN             1.00               NaN   \n",
+       "\n",
+       "  amount_over_fmt item_slug  addl_count  \n",
+       "0             NaN       NaN         NaN  \n",
+       "1             NaN       NaN         NaN  \n",
+       "2             NaN       NaN         NaN  \n",
+       "3             NaN       NaN         NaN  \n",
+       "4             NaN       NaN         NaN  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_filename = 'bandcamp-sales'\n",
-    "data = read_df_pickle('bandcamp-sales')\n",
+    "df_filename = 'bandcamp-sales-v0-raw'\n",
+    "data = read_df_pickle(df_filename)\n",
     "df = data.copy()\n",
     "df.head(5)"
    ]
