EDA in progress. Analysing money data.

--- a/notebooks/1_dataset_maintenance.ipynb
+++ b/notebooks/1_dataset_maintenance.ipynb
@@ -568,7 +568,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 64 (venv)",
+   "display_name": "Python (venv)",
    "language": "python",
    "name": "venv"
   },
