feature encoding complete

--- a/notebooks/2-1_EDA.ipynb
+++ b/notebooks/2-1_EDA.ipynb
@@ -5096,24 +5096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: export to eda_utils.py\n",
-    "def get_frequency_table(df, column):\n",
-    "    \"\"\"\n",
-    "    Returns a sorted frequency table for a given column in descending order.\n",
-    "    \"\"\"\n",
-    "    freq_table = df[column].value_counts(dropna=False).reset_index()\n",
-    "    freq_table.columns = [column, \"count\"]\n",
-    "    freq_table = freq_table.sort_values(by=\"count\", ascending=False).reset_index(drop=True)\n",
-    "    return freq_table\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5228,7 +5211,7 @@
    ],
    "source": [
     "for col in columns_media:\n",
-    "    frequency_table = get_frequency_table(df, col)\n",
+    "    frequency_table = eda.get_frequency_table(df, col)\n",
     "    print(frequency_table)\n",
     "    print()\n"
    ]
@@ -10924,7 +10907,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "GenAI (venv)",
+   "display_name": "Python 64 (venv)",
    "language": "python",
    "name": "venv"
   },
