--- a/notebooks/3-0_base_model_LR.ipynb
+++ b/notebooks/3-0_base_model_LR.ipynb
@@ -2,23 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <function tqdm.__del__ at 0x1127c89a0>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/bubblegum_doubledrops/Library/Mobile Documents/com~apple~CloudDocs/0prio - Important heavy backups/IronHack/big_projects/midproject-bandcamp-insights/myenv64/lib/python3.13/site-packages/tqdm/std.py\", line 1148, in __del__\n",
-      "    self.close()\n",
-      "  File \"/Users/bubblegum_doubledrops/Library/Mobile Documents/com~apple~CloudDocs/0prio - Important heavy backups/IronHack/big_projects/midproject-bandcamp-insights/myenv64/lib/python3.13/site-packages/tqdm/notebook.py\", line 279, in close\n",
-      "    self.disp(bar_style='danger', check_delay=False)\n",
-      "AttributeError: 'tqdm_notebook' object has no attribute 'disp'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Basic libraries\n",
     "import pandas as pd\n",
@@ -31,7 +17,7 @@
     "from data_ravers_utils.kaggle_loader import download_kaggle_dataset\n",
     "from data_ravers_utils.file_handler import *\n",
     "import data_ravers_utils.eda_utils as eda\n",
-    "import data_ravers_utils.model_train as mt\n",
+    "import data_ravers_utils.model_linear_regressor as lr\n",
     "\n",
     "# Settings\n",
     "pd.set_option('display.max_columns', None) # display all columns\n",
@@ -54,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +275,7 @@
        "4             NaN       NaN         NaN  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +315,7 @@
        "Name: amount_paid_usd, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,19 +326,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "amount_over_fmt\n",
-       "<class 'int'>    880867\n",
-       "<class 'str'>    119133\n",
+       "<class 'float'>    880867\n",
+       "<class 'str'>      119133\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +369,7 @@
        " 'addl_count']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +581,7 @@
        "LR_numeric_features_raw_ts0.4_rs100  0.0000  0.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +600,7 @@
     "# Define different random_state values for variability\n",
     "random_states = [15, 42, 100]\n",
     "\n",
-    "test_results_df = mt.linear_regression_combo_test(df, feature_subsets, target_variable_main, test_sizes, random_states)\n",
+    "test_results_df = lr.linear_regression_combo_test(df, feature_subsets, target_variable_main, test_sizes, random_states)\n",
     "\n",
     "test_results_df"
    ]
@@ -628,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +631,7 @@
     }
    ],
    "source": [
-    "base_linear_regression_model, dict_test_results = mt.linear_regression_control(df, numeric_columns, target_variable_main, test_size=0.1, random_state=15)\n",
+    "base_linear_regression_model, dict_test_results = lr.linear_regression_control(df, numeric_columns, target_variable_main, test_size=0.1, random_state=15)\n",
     "\n",
     "for key, value in dict_test_results.items():\n",
     "    print(f\"{key}: {value}\")"
@@ -671,7 +657,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "GenAI (venv)",
+   "display_name": "Python 64 (venv)",
    "language": "python",
    "name": "venv"
   },
