RF regressor ready. Demo ready.

--- a/notebooks/3-1_main_target_RF_regressor_v1.ipynb
+++ b/notebooks/3-1_main_target_RF_regressor_v1.ipynb
@@ -1852,8 +1852,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This cell runs ~ 50 min:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1868,8 +1875,82 @@
       "DEBUG:root:MSE =  51.9556\n",
       "DEBUG:root:{'test_size': 0.1, 'random_state': 15, 'R2': 0.5672838691082303, 'MAE': 2.946339375002276, 'RMSE': 7.208022971559119, 'MSE': 51.955595158523955, 'n_estimators': 200}\n",
       "DEBUG:root:90.0% for training data: 900000.\n",
-      "DEBUG:root:10.0% for test data: 100000.\n"
+      "DEBUG:root:10.0% for test data: 100000.\n",
+      "DEBUG:root:R2 = 0.6199\n",
+      "DEBUG:root:MAE = 2.7548\n",
+      "DEBUG:root:RMSE = 6.756\n",
+      "DEBUG:root:MSE =  45.643\n",
+      "DEBUG:root:{'test_size': 0.1, 'random_state': 15, 'R2': 0.6198586550830616, 'MAE': 2.754814102447385, 'RMSE': 6.755961606872419, 'MSE': 45.64301723353416, 'n_estimators': 200}\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>test_size</th>\n",
+       "      <th>random_state</th>\n",
+       "      <th>R2</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>RMSE</th>\n",
+       "      <th>MSE</th>\n",
+       "      <th>n_estimators</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>LR_geo_product_ts0.1_rs15_ne200</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.6199</td>\n",
+       "      <td>2.7548</td>\n",
+       "      <td>6.756</td>\n",
+       "      <td>45.6430</td>\n",
+       "      <td>200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LR_all_ts0.1_rs15_ne200</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.5673</td>\n",
+       "      <td>2.9463</td>\n",
+       "      <td>7.208</td>\n",
+       "      <td>51.9556</td>\n",
+       "      <td>200.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 test_size  random_state      R2     MAE  \\\n",
+       "LR_geo_product_ts0.1_rs15_ne200        0.1          15.0  0.6199  2.7548   \n",
+       "LR_all_ts0.1_rs15_ne200                0.1          15.0  0.5673  2.9463   \n",
+       "\n",
+       "                                  RMSE      MSE  n_estimators  \n",
+       "LR_geo_product_ts0.1_rs15_ne200  6.756  45.6430         200.0  \n",
+       "LR_all_ts0.1_rs15_ne200          7.208  51.9556         200.0  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1884,16 +1965,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save model"
+    "# Best model\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "best_model = base_model"
+    "This cell will run ~10 min:"
    ]
   },
   {
@@ -1902,11 +1981,156 @@
    "metadata": {},
    "outputs": [
     {
+     "ename": "ValueError",
+     "evalue": "If using all scalar values, you must pass an index",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m second_model, dict_test_results = rfr.random_forest_regressor_control(df, blend_geo_product, target_variable, test_size=\u001b[32m0.1\u001b[39m, random_state=\u001b[32m15\u001b[39m, n_estimators=\u001b[32m100\u001b[39m)\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# Format results into DataFrame\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m df_model_test = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mDataFrame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdict_test_results\u001b[49m\u001b[43m)\u001b[49m.T\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# Format metrics to 4 decimal places\u001b[39;00m\n\u001b[32m     10\u001b[39m columns_to_format = [\u001b[33m'\u001b[39m\u001b[33mR2\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mMAE\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mRMSE\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mMSE\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Library/Mobile Documents/com~apple~CloudDocs/0prio - Important heavy backups/IronHack/big_projects/midproject-bandcamp-insights/myenv64/lib/python3.13/site-packages/pandas/core/frame.py:778\u001b[39m, in \u001b[36mDataFrame.__init__\u001b[39m\u001b[34m(self, data, index, columns, dtype, copy)\u001b[39m\n\u001b[32m    772\u001b[39m     mgr = \u001b[38;5;28mself\u001b[39m._init_mgr(\n\u001b[32m    773\u001b[39m         data, axes={\u001b[33m\"\u001b[39m\u001b[33mindex\u001b[39m\u001b[33m\"\u001b[39m: index, \u001b[33m\"\u001b[39m\u001b[33mcolumns\u001b[39m\u001b[33m\"\u001b[39m: columns}, dtype=dtype, copy=copy\n\u001b[32m    774\u001b[39m     )\n\u001b[32m    776\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, \u001b[38;5;28mdict\u001b[39m):\n\u001b[32m    777\u001b[39m     \u001b[38;5;66;03m# GH#38939 de facto copy defaults to False only in non-dict cases\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m778\u001b[39m     mgr = \u001b[43mdict_to_mgr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtyp\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmanager\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    779\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, ma.MaskedArray):\n\u001b[32m    780\u001b[39m     \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mma\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m mrecords\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Library/Mobile Documents/com~apple~CloudDocs/0prio - Important heavy backups/IronHack/big_projects/midproject-bandcamp-insights/myenv64/lib/python3.13/site-packages/pandas/core/internals/construction.py:503\u001b[39m, in \u001b[36mdict_to_mgr\u001b[39m\u001b[34m(data, index, columns, dtype, typ, copy)\u001b[39m\n\u001b[32m    499\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    500\u001b[39m         \u001b[38;5;66;03m# dtype check to exclude e.g. range objects, scalars\u001b[39;00m\n\u001b[32m    501\u001b[39m         arrays = [x.copy() \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(x, \u001b[33m\"\u001b[39m\u001b[33mdtype\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m arrays]\n\u001b[32m--> \u001b[39m\u001b[32m503\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43marrays_to_mgr\u001b[49m\u001b[43m(\u001b[49m\u001b[43marrays\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtyp\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtyp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconsolidate\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcopy\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Library/Mobile Documents/com~apple~CloudDocs/0prio - Important heavy backups/IronHack/big_projects/midproject-bandcamp-insights/myenv64/lib/python3.13/site-packages/pandas/core/internals/construction.py:114\u001b[39m, in \u001b[36marrays_to_mgr\u001b[39m\u001b[34m(arrays, columns, index, dtype, verify_integrity, typ, consolidate)\u001b[39m\n\u001b[32m    111\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m verify_integrity:\n\u001b[32m    112\u001b[39m     \u001b[38;5;66;03m# figure out the index, if necessary\u001b[39;00m\n\u001b[32m    113\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m index \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m114\u001b[39m         index = \u001b[43m_extract_index\u001b[49m\u001b[43m(\u001b[49m\u001b[43marrays\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    115\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    116\u001b[39m         index = ensure_index(index)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Library/Mobile Documents/com~apple~CloudDocs/0prio - Important heavy backups/IronHack/big_projects/midproject-bandcamp-insights/myenv64/lib/python3.13/site-packages/pandas/core/internals/construction.py:667\u001b[39m, in \u001b[36m_extract_index\u001b[39m\u001b[34m(data)\u001b[39m\n\u001b[32m    664\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mPer-column arrays must each be 1-dimensional\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    666\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m indexes \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m raw_lengths:\n\u001b[32m--> \u001b[39m\u001b[32m667\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mIf using all scalar values, you must pass an index\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    669\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m have_series:\n\u001b[32m    670\u001b[39m     index = union_indexes(indexes)\n",
+      "\u001b[31mValueError\u001b[39m: If using all scalar values, you must pass an index"
+     ]
+    }
+   ],
+   "source": [
+    "logging.getLogger().setLevel(logging.INFO)\n",
+    "\n",
+    "\n",
+    "second_model, dict_test_results = rfr.random_forest_regressor_control(df, blend_geo_product, target_variable, test_size=0.1, random_state=15, n_estimators=100)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'test_size': 0.1,\n",
+       " 'random_state': 15,\n",
+       " 'R2': 0.6224386331913184,\n",
+       " 'MAE': 2.7557167761764156,\n",
+       " 'RMSE': 6.732996585648728,\n",
+       " 'MSE': 45.33324302235743,\n",
+       " 'n_estimators': 100}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_test_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>test_size</th>\n",
+       "      <th>random_state</th>\n",
+       "      <th>R2</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>RMSE</th>\n",
+       "      <th>MSE</th>\n",
+       "      <th>n_estimators</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.6224</td>\n",
+       "      <td>2.7557</td>\n",
+       "      <td>6.733</td>\n",
+       "      <td>45.3332</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   test_size  random_state      R2     MAE   RMSE      MSE  n_estimators\n",
+       "0        0.1            15  0.6224  2.7557  6.733  45.3332         100.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Format results into DataFrame\n",
+    "df_model_test = pd.DataFrame([dict_test_results])  # wrap the dict in a list\n",
+    "\n",
+    "# Format metrics to 4 decimal places\n",
+    "columns_to_format = ['R2', 'MAE', 'RMSE', 'MSE', 'n_estimators']\n",
+    "df_model_test[columns_to_format] = df_model_test[columns_to_format].astype(float).round(4)\n",
+    "\n",
+    "# Sort values — optional in case of one row, included for compatibility with multiple rows\n",
+    "df_model_test.sort_values('R2', ascending=False, inplace=True)\n",
+    "\n",
+    "df_model_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model = second_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "INFO:root:Model file pickle is updated: /Users/bubblegum_doubledrops/Library/Mobile Documents/com~apple~CloudDocs/0prio - Important heavy backups/IronHack/big_projects/midproject-bandcamp-insights/models/rf_regressor_best_model.pkl\n",
-      "WARNING:root:/Users/bubblegum_doubledrops/Library/Mobile Documents/com~apple~CloudDocs/0prio - Important heavy backups/IronHack/big_projects/midproject-bandcamp-insights/models/rf_regressor_best_model.pkl exceeds GitHub size limit (503288508 bytes)\n"
+      "WARNING:root:/Users/bubblegum_doubledrops/Library/Mobile Documents/com~apple~CloudDocs/0prio - Important heavy backups/IronHack/big_projects/midproject-bandcamp-insights/models/rf_regressor_best_model.pkl exceeds GitHub size limit (4235402762 bytes)\n"
      ]
     }
    ],
